feat: improveed ParserFactory